# missfits

./: COPYRIGHT  ChangeLog  Makefile.am  Makefile.in  README  THANKS  aclocal.m4  config.h.in  configure  configure.ac  missfits.spec.in
debian/: changelog  rules
man/: Makefile.in  missfits.1.in
software/missfits/: ChangeLog  Makefile.am  Makefile.in  README  THANKS  aclocal.m4  acx_prog_cc_optim.m4  config.h.in  configure  configure.ac  missfits-mp.spec.in  missfits.spec.in
software/missfits/man/: Makefile.in
software/missfits/src/: Makefile.am  Makefile.in  custom.c  define.h  file.c  file.h  fitswcs.c  fitswcs.h  globals.h  main.c  makeit.c  preflist.h  prefs.c  prefs.h  process.c  xml.c  xml.h
software/missfits/src/fits/: Makefile.in  fitscat.h  fitshead.c  fitsmisc.c  fitsutil.c
software/missfits/src/wcs/: Makefile.in
software/missfits/xsl/: missfits.xsl
src/: Makefile.am  Makefile.in  custom.c  custom.h  define.h  file.c  file.h  globals.h  main.c  makeit.c  preflist.h  process.c  types.h  xml.c  xml.h
src/fits/: Makefile.am  Makefile.in  fitsutil.c
src/wcs/: Makefile.in  poly.h
tags/2.2.11/: AUTHORS  COPYRIGHT  Makefile.am  configure.ac
tags/2.2.11/man/: Makefile.am
tags/2.2.11/src/: preflist.h  process.c
tags/2.2.11/src/fits/: Makefile.in
tags/2.4.0/: Makefile.am  aclocal.m4  configure.ac  missfits.spec.in
tags/2.4.0/src/: Makefile.in  custom.c  custom.h  file.h  key.h  preflist.h  types.h  xml.h
tags/2.4.0/src/fits/: Makefile.in
tags/2.8.0/: AUTHORS  COPYRIGHT  ChangeLog  Makefile.am  README  aclocal.m4  config.h.in  configure  configure.ac
tags/2.8.0/man/: Makefile.am  Makefile.in
tags/2.8.0/src/: Makefile.am  custom.h  file.c  file.h  prefs.c  xml.c
tags/2.8.0/src/fits/: Makefile.in
tags/2.8.0/src/wcs/: Makefile.in
trunk/: COPYRIGHT  ChangeLog  INSTALL  Makefile.am  Makefile.in  THANKS  config.h.in  configure  configure.ac  missfits.spec.in
trunk/debian/: control
trunk/man/: Makefile.in  missfits.1.in  missfits.x
trunk/src/: Makefile.am  Makefile.in  define.h  file.c  main.c  makeit.c  preflist.h  prefs.c  prefs.h  process.c  process.h  types.h  xml.h
trunk/src/fits/: Makefile.in  fitsutil.c
trunk/src/wcs/: Makefile.am  Makefile.in  README  poly.c
trunk/xsl/: missfits.xsl
xsl/: missfits.xsl
